[package]
name = "neopolengine"
version = "0.1.0"
edition = "2021"

[[bin]] 
name = "prepneo"
version = "0.1.0"
edition = "2021"

[[bin]] 
name = "neo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
minijinja = { version = "1.0.3", features = ["loader", "speedups"] }
nom = "7.1.3"
rstest = "0.18.1"
rusqlite = "0.29.0"
serde = {version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
walkdir = "2.3.3"
