[package]
name = "neopolengine"
version = "0.1.0"
edition = "2021"

[[bin]] 
name = "neo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
eyre = "0.6.8"
miette = "5.10.0"
minijinja = { version = "1.0.3", features = ["loader", "speedups"] }
nom = "7.1.3"
notify = "6.0.1"
notify-debouncer-full = "0.2.0"
rstest = "0.18.1"
rusqlite = "0.29.0"
serde = {version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
sha256 = "1.1.5"
thiserror = "1.0.43"
tokio = "1.29.1"
walkdir = "2.3.3"
watchexec = "2.3.0"
watchexec-signals = "1.0.0"
